[gd_scene load_steps=10 format=3 uid="uid://by35re0g887b3"]

[ext_resource type="Script" path="res://assets/Scripts/chapters/chapter_2.gd" id="1_hfoxf"]
[ext_resource type="Texture2D" uid="uid://x12526ynoe67" path="res://assets/Sprite/UI/level_selection.png" id="2_se0bb"]
[ext_resource type="Texture2D" uid="uid://buhed3ow5tlaq" path="res://assets/Sprite/UI/arrow.png" id="3_8n2b7"]
[ext_resource type="FontFile" uid="uid://bgort6x02naib" path="res://assets/fonts/Retro Gaming.ttf" id="4_fjdse"]

[sub_resource type="Theme" id="Theme_awuhk"]

[sub_resource type="Animation" id="Animation_r1643"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8civw"]
resource_name = "blink"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 1.3, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5x4ac"]
_data = {
"RESET": SubResource("Animation_r1643"),
"blink": SubResource("Animation_8civw")
}

[sub_resource type="LabelSettings" id="LabelSettings_7xe41"]
line_spacing = 7.0
font = ExtResource("4_fjdse")
font_size = 56

[node name="Chapter2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hfoxf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -33.0
offset_right = 16.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_se0bb")
expand_mode = 1

[node name="Level1" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 216.0
offset_top = 256.0
offset_right = 312.0
offset_bottom = 352.0
pivot_offset = Vector2(48, 0)
theme = SubResource("Theme_awuhk")
ignore_texture_size = true
stretch_mode = 0

[node name="Level2" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 352.0
offset_top = 256.0
offset_right = 448.0
offset_bottom = 352.0
pivot_offset = Vector2(40, 0)
theme = SubResource("Theme_awuhk")
ignore_texture_size = true
stretch_mode = 0

[node name="Level3" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 480.0
offset_top = 256.0
offset_right = 576.0
offset_bottom = 352.0
pivot_offset = Vector2(48, 0)
theme = SubResource("Theme_awuhk")
ignore_texture_size = true
stretch_mode = 0

[node name="Level4" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 608.0
offset_top = 256.0
offset_right = 704.0
offset_bottom = 352.0
pivot_offset = Vector2(48, 0)
theme = SubResource("Theme_awuhk")
ignore_texture_size = true
stretch_mode = 0

[node name="Level5" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 744.0
offset_top = 256.0
offset_right = 840.0
offset_bottom = 352.0
pivot_offset = Vector2(48, 0)
theme = SubResource("Theme_awuhk")
ignore_texture_size = true
stretch_mode = 0

[node name="Arrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(264, 224)
rotation = 1.5708
scale = Vector2(0.958333, 0.958333)
texture = ExtResource("3_8n2b7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_5x4ac")
}
autoplay = "blink"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 80.0
offset_right = 711.0
offset_bottom = 152.0
text = "Chapter 2"
label_settings = SubResource("LabelSettings_7xe41")

[connection signal="pressed" from="Level1" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_level_1_button_pressed"]
